# COBS-Consistent-Overhead-Byte-Stuffing

./: .clang-format  CMakeLists.txt  Kconfig  LICENSE  README.markdown  cobs.c  cobs.h  cobs_test.c  stream.c  west-ci.yml
.github/workflows/: build.yml  lint.yml
include/: cobs.h
include/cobs/: stream.h
scripts/: lint
tests/cobs/: CMakeLists.txt  prj.conf  testcase.yaml
tests/cobs/src/: main.c
testutils/: CMakeLists.txt  common.c
testutils/include/cobs/: testutils.h
zephyr/: module.yml
